--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node -r esm ./src/index.js",
+    "start": "npm install && node -r esm ./src/index.js",
+    "heroku-postbuild": "cd build && npm install && npm start",
     "start-dev": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
