--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm install && node -r esm ./src/index.js",
-    "heroku-postbuild": "cd build && npm install && npm start",
+    "heroku-postbuild": "cd src/build && npm install && npm start",
     "start-dev": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
