URI for heroku mongodb added

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8080
-DATABASE_URL=mongodb+srv://admin:beatlesPD007@cluster0-dd7zt.mongodb.net/test?authSource=admin&replicaSet=Cluster0-shard-0&readPreference=primary&appname=MongoDB%20Compass%20Community&ssl=true
+DATABASE_URL=mongodb://admin:beatlesPD007@ds115166.mlab.com:15166/heroku_c9cw8rb5
