--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm install && node -r esm ./src/index.js",
+    "heroku-postbuild": "cd ./src/client && npm install && npm run build",
     "start-dev": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
