--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm install && node -r esm ./src/index.js",
     "heroku-postbuild": "cd ./src/client && npm install && npm run build",
-    "start-dev": "nodemon ./src/server.js",
+    "start-dev": "nodemon ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
